--- a/config/commence.in
+++ b/config/commence.in
@@ -35,6 +35,7 @@ CP=cp
 INSTALL=@INSTALL@
 INSTALL_PROGRAM=@INSTALL_PROGRAM@
 INSTALL_DATA=@INSTALL_DATA@
+PARALLEL=@PARALLEL@
 RUNSERIAL=@RUNSERIAL@
 RUNPARALLEL=@RUNPARALLEL@
 RUNTEST=$(RUNSERIAL)
