--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -30,7 +30,8 @@ TEST_PROGS=h5_write h5_read h5_extend_write h5_chunk_read h5_compound   \
 
 ## These are the files that `make clean' (and derivatives) will remove from
 ## this directory.
-CLEAN=*.h5 *.raw *.meta
+## *.clog are from MPE option
+CLEAN=*.h5 *.raw *.meta *.clog
 
 ## List all source files here.  The list of object files will be
 ## created by replacing the `.c' with a `.o'.  This list is necessary
