--- a/testpar/Makefile.in
+++ b/testpar/Makefile.in
@@ -1,4 +1,3 @@
-## hdf5 Parallel Library Test Makefile(.in)
 ##
 ## Copyright by the Board of Trustees of the University of Illinois.
 ## All rights reserved.
@@ -11,6 +10,8 @@
 ## is linked from the top-level documents page.  It can also be found at
 ## http://hdf.ncsa.uiuc.edu/HDF5/doc/Copyright.html.  If you do not have
 ## access to either file, you may request a copy from hdfhelp@ncsa.uiuc.edu.
+##
+## hdf5 Parallel Library Test Makefile(.in)
 ##
 top_srcdir=@top_srcdir@
 top_builddir=..
@@ -35,7 +36,10 @@ TEST_SCRIPTS=testph5.sh
 PROGS=$(TEST_PROGS_PARA) testphdf5
 
 ## Temporary files
-MOSTLYCLEAN=ParaEg[123].h5f
+## MPItest.h5 is from t_mpi
+## Para*.h5 are from testphdf
+## *.clog are from MPE option
+MOSTLYCLEAN=MPItest.h5 Para*.h5 *.clog
 DISTCLEAN=go Makefile testph5.sh
 
 ## Test source files
