--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -74,13 +74,13 @@ CLEAN=$(TIMINGS)
 TEST_SRC=big.c bittests.c cmpd_dset.c dsets.c dtypes.c extend.c              \
          external.c fillval.c flush1.c flush2.c gheap.c h5test.c hyperslab.c \
          istore.c lheap.c links.c mount.c mtime.c ohdr.c stab.c tarray.c     \
-         tattr.c tconfig.c testhdf5.c testmeta.c tfile.c tgenprop.c th5s.c   \
-         theap.c titerate.c tmeta.c trefer.c trefstr.c tselect.c ttime.c     \
-         ttbbt.c ttst.c tvltypes.c tvlstr.c tmisc.c unlink.c enum.c ttsafe.c \
-         ttsafe_dcreate.c ttsafe_error.c ttsafe_cancel.c ttsafe_acreate.c    \
-         gass_write.c gass_read.c gass_append.c srb_read.c srb_write.c       \
-         srb_append.c stream_test.c set_extent.c getname.c file_handle.c     \
-         ntypes.c dangle.c
+         tattr.c tconfig.c testframe.c testhdf5.c testmeta.c tfile.c         \
+         tgenprop.c th5s.c theap.c titerate.c tmeta.c trefer.c trefstr.c     \
+         tselect.c ttime.c ttbbt.c ttst.c tvltypes.c tvlstr.c tmisc.c        \
+         unlink.c enum.c ttsafe.c ttsafe_dcreate.c ttsafe_error.c            \
+         ttsafe_cancel.c ttsafe_acreate.c gass_write.c gass_read.c           \
+         gass_append.c srb_read.c srb_write.c srb_append.c stream_test.c     \
+         set_extent.c getname.c file_handle.c ntypes.c dangle.c
 
 TEST_OBJ=$(TEST_SRC:.c=.lo)
 
@@ -102,12 +102,12 @@ timings _timings: $(TIMINGS)
 ## How to build the tests...  They all depend on the test and hdf5 libraries.
 $(TEST_PROGS): $(LIB) $(LIBHDF5)
 
-TESTHDF5_OBJ=testhdf5.lo tarray.lo tattr.lo tconfig.lo tfile.lo tgenprop.lo   \
-    th5s.lo theap.lo titerate.lo tmeta.lo ttime.lo trefer.lo trefstr.lo       \
-    tselect.lo ttbbt.lo ttst.lo tvltypes.lo tvlstr.lo tmisc.lo
+TESTHDF5_OBJ=testhdf5.lo testframe.lo tarray.lo tattr.lo tconfig.lo tfile.lo  \
+    tgenprop.lo th5s.lo theap.lo titerate.lo tmeta.lo ttime.lo trefer.lo      \
+    trefstr.lo tselect.lo ttbbt.lo ttst.lo tvltypes.lo tvlstr.lo tmisc.lo
 
-TTS_OBJ=ttsafe.lo ttsafe_dcreate.lo ttsafe_error.lo ttsafe_cancel.lo          \
-        ttsafe_acreate.lo
+TTS_OBJ=ttsafe.lo testframe.lo ttsafe_dcreate.lo ttsafe_error.lo              \
+    ttsafe_cancel.lo ttsafe_acreate.lo
 
 testhdf5: $(TESTHDF5_OBJ)
 	@$(LT_LINK_EXE) $(CFLAGS) -o $@ $(TESTHDF5_OBJ) $(LIB) $(LIBHDF5) $(LDFLAGS) $(LIBS)
