--- a/configure.in
+++ b/configure.in
@@ -25,7 +25,7 @@ dnl
 dnl NOTE: Don't forget to change the version number here when we do a
 dnl release!!!
 dnl
-AC_INIT([HDF5], [1.7.19], [hdfhelp@ncsa.uiuc.edu])
+AC_INIT([HDF5], [1.7.19-fph5_alpha0], [hdfhelp@ncsa.uiuc.edu])
 AC_CONFIG_SRCDIR([src/H5.c])
 AC_CONFIG_HEADER([src/H5config.h])
 
