--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -938,6 +938,7 @@ dnl `-lz' and their locations might be specified with the `--with-zlib'
 dnl command-line switch. The value is an include path and/or a library path.
 dnl If the library path is specified then it must be preceded by a comma.
 dnl
+AC_SUBST(USE_FILTER_DEFLATE) USE_FILTER_DEFLATE="no"
 AC_ARG_WITH([zlib],
             [AC_HELP_STRING([--with-zlib=DIR],
                             [Use zlib library for external deflate I/O
@@ -1011,6 +1012,7 @@ esac
 
 if test "x$HAVE_ZLIB" = "xyes" -a "x$HAVE_ZLIB_H" = "xyes" -a "x$HAVE_COMPRESS2" = "xyes"; then
     AC_DEFINE([HAVE_FILTER_DEFLATE], [1], [Define if support for deflate filter is enabled])
+    USE_FILTER_DEFLATE="yes"
 
     dnl Add "deflate" to external filter list
     if test "X$EXTERNAL_FILTERS" != "X"; then
@@ -1026,6 +1028,7 @@ dnl `-lsz' and their locations might be specified with the `--with-szlib'
 dnl command-line switch. The value is an include path and/or a library path.
 dnl If the library path is specified then it must be preceded by a comma.
 dnl
+AC_SUBST(USE_FILTER_SZIP) USE_FILTER_SZIP="no"
 AC_ARG_WITH([szlib],
             [AC_HELP_STRING([--with-szlib=DIR],
                             [Use szlib library for external szlib I/O
@@ -1098,6 +1101,7 @@ esac
 if test "x$HAVE_SZLIB" = "xyes" -a "x$HAVE_SZLIB_H" = "xyes"; then
     AC_DEFINE(HAVE_FILTER_SZIP, 1,
             [Define if support for szip filter is enabled])
+    USE_FILTER_SZIP="yes"
 
     dnl Add "szip" to external filter list
     if test "X$EXTERNAL_FILTERS" != "X"; then
@@ -2302,7 +2306,7 @@ if test -n "$PARALLEL"; then
   fi
   
 fi
-  
+
 dnl ----------------------------------------------------------------------
 dnl Turn on internal I/O filters by setting macros in header files
 dnl Internal I/O filters are contained entirely within the library and do
@@ -2312,6 +2316,8 @@ dnl an external filter.  Each external filter is controlled with an
 dnl "--with-foo=" configure flag.
 dnl
 AC_SUBST([FILTERS])
+AC_SUBST(USE_FILTER_SHUFFLE) USE_FILTER_SHUFFLE="no"
+AC_SUBST(USE_FILTER_FLETCHER32) USE_FILTER_FLETCHER32="no"
 AC_MSG_CHECKING([for I/O filters])
 AC_ARG_ENABLE([filters],
               [AC_HELP_STRING([--enable-filters=all],
@@ -2346,10 +2352,12 @@ if test -n "$FILTERS"; then
     if test $filter = "SHUFFLE"; then
       AC_DEFINE([HAVE_FILTER_SHUFFLE], [1],
                 [Define if support for shuffle filter is enabled])
+      USE_FILTER_SHUFFLE="yes"
     fi
     if test $filter = "FLETCHER32"; then
       AC_DEFINE([HAVE_FILTER_FLETCHER32], [1],
                 [Define if support for Fletcher32 checksum is enabled])
+      USE_FILTER_FLETCHER32="yes"
     fi
   done
 fi
@@ -2792,6 +2800,7 @@ AC_CONFIG_FILES([src/libhdf5.settings
                  perform/Makefile
                  tools/Makefile
                  tools/h5dump/Makefile
+                 tools/h5dump/testh5dump.sh
                  tools/h5import/Makefile
                  tools/h5diff/Makefile
                  tools/h5repack/Makefile
