--- a/configure.in
+++ b/configure.in
@@ -802,6 +802,7 @@ dnl `-lz' and their locations might be specified with the `--with-zlib'
 dnl command-line switch. The value is an include path and/or a library path.
 dnl If the library path is specified then it must be preceded by a comma.
 dnl
+AC_SUBST(USE_FILTER_DEFLATE) USE_FILTER_DEFLATE="no"
 AC_ARG_WITH([zlib],
             [AC_HELP_STRING([--with-zlib=DIR],
                             [Use zlib library for external deflate I/O
@@ -874,8 +875,8 @@ case $withval in
 esac
 
 if test "x$HAVE_ZLIB" = "xyes" -a "x$HAVE_ZLIB_H" = "xyes" -a "x$HAVE_COMPRESS2" = "xyes"; then
-    AC_DEFINE(HAVE_FILTER_DEFLATE, 1,
-            [Define if support for deflate filter is enabled])
+    AC_DEFINE([HAVE_FILTER_DEFLATE], [1], [Define if support for deflate filter is enabled])
+    USE_FILTER_DEFLATE="yes"
 
     dnl Add "deflate" to external filter list
     if test "X$EXTERNAL_FILTERS" != "X"; then
@@ -891,6 +892,7 @@ dnl `-lsz' and their locations might be specified with the `--with-szlib'
 dnl command-line switch. The value is an include path and/or a library path.
 dnl If the library path is specified then it must be preceded by a comma.
 dnl
+AC_SUBST(USE_FILTER_SZIP) USE_FILTER_SZIP="no"
 AC_ARG_WITH([szlib],
             [AC_HELP_STRING([--with-szlib=DIR],
                             [Use szlib library for external szlib I/O
@@ -963,6 +965,7 @@ esac
 if test "x$HAVE_SZLIB" = "xyes" -a "x$HAVE_SZLIB_H" = "xyes"; then
     AC_DEFINE(HAVE_FILTER_SZIP, 1,
             [Define if support for szip filter is enabled])
+    USE_FILTER_SZIP="yes"
 
     dnl Add "szip" to external filter list
     if test "X$EXTERNAL_FILTERS" != "X"; then
@@ -2060,7 +2063,10 @@ dnl an example of an internal filter, while the gzip filter is an example of
 dnl an external filter.  Each external filter is controlled with an
 dnl "--with-foo=" configure flag.
 dnl
-AC_MSG_CHECKING(for I/O filters)
+AC_SUBST([FILTERS])
+AC_SUBST(USE_FILTER_SHUFFLE) USE_FILTER_SHUFFLE="no"
+AC_SUBST(USE_FILTER_FLETCHER32) USE_FILTER_FLETCHER32="no"
+AC_MSG_CHECKING([for I/O filters])
 AC_ARG_ENABLE([filters],
               [AC_HELP_STRING([--enable-filters=all],
                               [Turn on all internal I/O filters. One may
@@ -2069,36 +2075,37 @@ AC_ARG_ENABLE([filters],
                                I/O filters.])],
               [FILTERS=$enableval])
 
-AC_SUBST([FILTERS])
 dnl Eventually: all_filters="shuffle,foo,bar,baz"
 all_filters="shuffle,fletcher32"
 case "X-$FILTERS" in
   X-|X-all)
     FILTERS=$all_filters
-    AC_MSG_RESULT(all ($FILTERS))
+    AC_MSG_RESULT([all ($FILTERS)])
     ;;
   X-no|X-none)
-    AC_MSG_RESULT(none)
+    AC_MSG_RESULT([none])
     FILTERS="none"
     ;;
   *)
-    AC_MSG_RESULT($FILTERS)
+    AC_MSG_RESULT([$FILTERS])
     ;;
 esac
 
 if test -n "$FILTERS"; then
   for filter in `echo $FILTERS | tr 'a-z,' 'A-Z '`; do
-dnl ----------------------------------------------------------------------
-dnl Have to use separate 'if' construct for each filter, so that autoheader
-dnl can detect the AC_DEFINE for each one...
-dnl
+    dnl ------------------------------------------------------------------
+    dnl Have to use separate 'if' construct for each filter, so that
+    dnl autoheader can detect the AC_DEFINE for each one...
+    dnl
     if test $filter = "SHUFFLE"; then
-        AC_DEFINE(HAVE_FILTER_SHUFFLE, 1,
+      AC_DEFINE([HAVE_FILTER_SHUFFLE], [1],
                 [Define if support for shuffle filter is enabled])
+      USE_FILTER_SHUFFLE="yes"
     fi
     if test $filter = "FLETCHER32"; then
-        AC_DEFINE(HAVE_FILTER_FLETCHER32, 1,
+      AC_DEFINE([HAVE_FILTER_FLETCHER32], [1],
                 [Define if support for Fletcher32 checksum is enabled])
+      USE_FILTER_FLETCHER32="yes"
     fi
   done
 fi
@@ -2333,6 +2340,7 @@ AC_CONFIG_FILES([src/libhdf5.settings
                  perform/Makefile
                  tools/Makefile
                  tools/h5dump/Makefile
+                 tools/h5dump/testh5dump.sh
                  tools/h5import/Makefile
                  tools/h5diff/Makefile
                  tools/h5repack/Makefile
